Remove .html from paths

--- a/what-is-life.html
+++ b/what-is-life.html
@@ -27,7 +27,7 @@
     <header>
         <div class="nav-bar">
             <div class="l-nav">
-                <a href="index.html">sumitsengar<span>.</span></a>
+                <a href="index">sumitsengar<span>.</span></a>
             </div>
             <div class="r-nav">
                 <div class="sun" onclick="changeTheme()"></div>
